# quandl-zillow

./: .gitignore  pyproject.toml  requirements.txt
archive/: download_data_paginated.py  download_data_plotted.py
dbt/zillow_analytics/: dbt_project.yml  profiles.yml
scripts/: config.py  create_database.py  create_schemas.sh  download_data.py  download_data2.py  download_data_async.py  download_data_paginated.py  download_data_paginated2.py  download_data_plotted.py  download_data_zip.py  logger_config.py  setup_database.sh  unzip_data.py
src/download/: download_zip.py  unzip.py
src/ingest/: csv_to_postgres.py
src/utils/: db_utils.py  logger_utils.py
